--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "@types/nodemailer": "^7.0.0",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
+    "@types/pg": "^8.15.5",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@types/ws": "^8.5.13",
