--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@sendgrid/mail": "^8.1.5",
     "@supabase/supabase-js": "^2.56.0",
     "@tanstack/react-query": "^5.60.5",
+    "chrono-node": "^2.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -56,8 +57,10 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "framer-motion": "^11.13.1",
+    "googleapis": "^159.0.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.453.0",
+    "luxon": "^3.7.1",
     "memorystore": "^1.6.7",
     "multer": "^2.0.2",
     "nanoid": "^5.1.5",
@@ -94,6 +97,7 @@
     "@types/connect-pg-simple": "^7.0.3",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
+    "@types/luxon": "^3.7.1",
     "@types/multer": "^2.0.0",
     "@types/node": "20.16.11",
     "@types/nodemailer": "^7.0.0",
